fix img on mobile bug

--- a/src/app/components/shared/destination-card/destination-card.component.scss
+++ b/src/app/components/shared/destination-card/destination-card.component.scss
@@ -22,9 +22,8 @@
 }
 
 .image-container img {
-  width: 150%;
+  width: calc(100vw - 40px);
   display: block;
-  
 }
 
 .tag {
@@ -44,6 +43,9 @@
   .image-container {
     width: 250px;
     height: 250px;
+  }
+  .image-container img {
+    width: 150%;
   }
 }
 
